php fix to content display. layout bug still exists.

--- a/home_style.css
+++ b/home_style.css
@@ -120,7 +120,7 @@ p{
 	float:left;
 	width:150px;
 	height: 100%;
-	position:absolute;
+	#position:absolute;
 	background-color:#9999ff;
 }
 
